--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-pickers": "^1.0.0-rc.4",
+    "npm": "^5.8.0",
     "prop-types": "latest",
+    "qrcode.react": "^0.8.0",
     "react": "latest",
     "react-dom": "latest",
     "react-jss": "latest",
