added stable calendar

--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "date-fns": "^2.0.0-alpha.7",
+    "drag-drop-touch-polyfill": "^1.0.0",
+    "fs-extra": "^5.0.0",
     "jss": "latest",
     "lodash": "^4.17.5",
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-pickers": "^1.0.0-rc.4",
+    "moment": "^2.22.0",
     "npm": "^5.8.0",
     "prop-types": "latest",
     "qrcode.react": "^0.8.0",
     "react": "latest",
+    "react-agenda": "0.0.6",
+    "react-big-calendar": "^0.19.0",
     "react-dom": "latest",
     "react-jss": "latest",
     "react-scripts": "latest",
