--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.2.2",
+    "@material-ui/icons": "^1.1.0",
     "classnames": "^2.2.5",
     "date-fns": "^2.0.0-alpha.7",
     "dotenv": "^5.0.1",
     "drag-drop-touch-polyfill": "^1.0.0",
+    "es2015": "0.0.0",
     "firebase": "^4.13.1",
     "firebase-admin": "^5.12.0",
     "fs-extra": "^5.0.0",
