--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "date-fns": "^2.0.0-alpha.7",
     "dotenv": "^5.0.1",
     "drag-drop-touch-polyfill": "^1.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "es2015": "0.0.0",
     "firebase": "^4.13.1",
     "firebase-admin": "^5.12.0",
@@ -31,6 +33,7 @@
     "react-jss": "latest",
     "react-scripts": "latest",
     "react-select": "^1.2.1",
+    "react-test-renderer": "^16.4.1",
     "react-websocket": "^2.0.0",
     "socket.io-client": "^2.1.0",
     "ws": "^5.1.1"
